worked on project section, added github link

--- a/public/index.html
+++ b/public/index.html
@@ -39,14 +39,17 @@
                     <a target="_blank" href="https://twitter.com/nsonam18" class="remove-color-link">
                         <img src="./img/twitter.svg" alt="twitter" width="20rem">
                     </a>
+                    <a target="_blank" href="https://github.com/norbusonam" class="remove-color-link">
+                        <img src="./img/github.svg" alt="github" width="20rem">
+                    </a>
                     <a target="_blank" href="https://medium.com/@norbusonam" class="remove-color-link">
-                        <img src="./img/medium.svg" alt="twitter" width="20rem">
+                        <img src="./img/medium.svg" alt="medium" width="20rem">
                     </a>
                 </div>
             </div>
 
             <!-- BIO -->
-            <div id="bio" class="row justify-content-center pt-4">
+            <div id="bio" class="row justify-content-center pt-5">
                 <div class="col-12 col-sm-8 col-md-6 col-lg-4">
                     <img src="./img/norbu.jpeg" alt="portrait" id="portrait">
                 </div>
@@ -60,6 +63,7 @@
 
             <!-- WORK -->
             <div id="work" class="row pt-5">
+                <h3 class="section-header">Work Experience</h3>
                 <div class="timeline">
                     <div class="timeline-row">
                         <div class="timeline-time">
@@ -68,7 +72,7 @@
                         <div class="timeline-content">
                             <img src="./img/microsoft.png" alt="">
                             <h4>Software Engineer</h4>
-                            <p></p>
+                            <p>...</p>
                         </div>
                     </div>
                     <div class="timeline-row">
@@ -125,13 +129,55 @@
             </div>
 
             <!-- PROJECTS -->
-            <div id="projects" class="row">
-                <h1>Projects</h1>
+            <div id="projects" class="row no-gutters pt-5 justify-content-center">
+                <h3 class="section-header">Projects</h3>
+                <div class="project-wrapper col-12 col-sm-6 col-lg-4" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
+                    <div class="card">
+                        <h4>project 1</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
+                    </div>
+                </div>
+                <div class="project-wrapper col-12 col-sm-6 col-lg-4" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
+                    <div class="card">
+                        <h4>project 2</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
+                    </div>
+                </div>
+                <div class="project-wrapper col-12 col-sm-6 col-lg-4" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
+                    <div class="card">
+                        <h4>project 3</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
+                    </div>
+                </div>
+                <div class="project-wrapper col-12 col-sm-6 col-lg-4" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
+                    <div class="card">
+                        <h4>project 4</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
+                    </div>
+                </div>
+                <div class="project-wrapper col-12 col-sm-6 col-lg-4" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
+                    <div class="card">
+                        <h4>project 5</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
+                    </div>
+                </div>
+                <div class="project-wrapper col-12 col-sm-6 col-lg-4" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
+                    <div class="card">
+                        <h4>project 6</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
+                    </div>
+                </div>
+                <div class="project-wrapper col-12 col-sm-6 col-lg-4" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
+                    <div class="card">
+                        <h4>project 7</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
+                    </div>
+                </div>
             </div>
 
             <!-- CONTACT -->
-            <div id="contact" class="row">
-                <h1>Contact</h1>
+            <div id="contact" class="row pt-5">
+                <h3 class="section-header">Contact</h3>
             </div>
 
         </div>
