--- a/public/index.html
+++ b/public/index.html
@@ -131,44 +131,44 @@
             <!-- PROJECTS -->
             <div id="projects" class="row no-gutters pt-5 justify-content-center">
                 <h3 class="section-header">Projects</h3>
-                <div class="project-wrapper col-12 col-sm-6 col-lg-4" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
-                    <div class="card">
+                <div class="project-wrapper col-12 col-sm-6 col-lg-4">
+                    <div class="card" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
                         <h4>project 1</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
                     </div>
                 </div>
-                <div class="project-wrapper col-12 col-sm-6 col-lg-4" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
-                    <div class="card">
+                <div class="project-wrapper col-12 col-sm-6 col-lg-4">
+                    <div class="card" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
                         <h4>project 2</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
                     </div>
                 </div>
-                <div class="project-wrapper col-12 col-sm-6 col-lg-4" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
-                    <div class="card">
+                <div class="project-wrapper col-12 col-sm-6 col-lg-4">
+                    <div class="card" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
                         <h4>project 3</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
                     </div>
                 </div>
-                <div class="project-wrapper col-12 col-sm-6 col-lg-4" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
-                    <div class="card">
+                <div class="project-wrapper col-12 col-sm-6 col-lg-4">
+                    <div class="card" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
                         <h4>project 4</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
                     </div>
                 </div>
-                <div class="project-wrapper col-12 col-sm-6 col-lg-4" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
-                    <div class="card">
+                <div class="project-wrapper col-12 col-sm-6 col-lg-4" >
+                    <div class="card" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
                         <h4>project 5</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
                     </div>
                 </div>
-                <div class="project-wrapper col-12 col-sm-6 col-lg-4" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
-                    <div class="card">
+                <div class="project-wrapper col-12 col-sm-6 col-lg-4">
+                    <div class="card" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
                         <h4>project 6</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
                     </div>
                 </div>
-                <div class="project-wrapper col-12 col-sm-6 col-lg-4" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
-                    <div class="card">
+                <div class="project-wrapper col-12 col-sm-6 col-lg-4">
+                    <div class="card" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
                         <h4>project 7</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
                     </div>
