--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
                     <a target="_blank" href="https://www.instagram.com/norbu_sonam/" class="remove-color-link">
                         <img src="./img/instagram.svg" alt="instagram" width="20rem">
                     </a>
-                    <a target="_blank" href="https://twitter.com/nsonam18" class="remove-color-link">
+                    <a target="_blank" href="https://twitter.com/norbusonam_" class="remove-color-link">
                         <img src="./img/twitter.svg" alt="twitter" width="20rem">
                     </a>
                     <a target="_blank" href="https://github.com/norbusonam" class="remove-color-link">
