added footer, mobile responsive, removed contact

--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,10 @@
                         <a class="remove-color-link" href="#bio">Norbu Sonam</a>
                     </h2>
                 </div>
-                <div> 
+                <div class="hide-on-mobile"> 
+                    <a href="#bio" class="nav-link remove-color-link">Bio</a>
                     <a href="#work" class="nav-link remove-color-link">Work</a>
                     <a href="#projects" class="nav-link remove-color-link">Projects</a>
-                    <a href="#contact" class="nav-link remove-color-link">Contact</a>
                 </div>
                 <div>
                     <a target="_blank" href="https://www.linkedin.com/in/norbu-sonam-967ba9170/" class="remove-color-link">
@@ -56,8 +56,20 @@
             </div>
             <div class="row justify-content-center mt-1" id="bio-text">
                 <div class="col-12 col-sm-10 col-md-8 col-lg-6">
-                    <h3>Norbu Sonam</h3>
-                    <p>I am a senior at Rensselaer Polytechnic Institute, majoring in Computer Science & minoring in Entrepreneurship. I have completed <a href="#work" class="link-in-text">internships</a> at various companies, including Microsoft & IBM. After graduation, I will be working as a Software Engineer at Microsoft. I have various <a href="#projects" class="link-in-text">personal projects</a> that I use to explore my interests in technology & software.</p>
+                    <h3 class="section-header">Norbu Sonam</h3>
+                    <p>
+                        I am currently a Software Engineer at Microsoft. I graduated
+                        from Rensselaer Polytechnic Institute with a major in Computer
+                        Science, concentrated in Data & Artificial Intelligence, and a 
+                        minor in Entrepreneurship. I have completed <a href="#work" 
+                        class="link-in-text"> internships</a> at various companies, 
+                        including Microsoft & IBM. I have various <a href="#projects"
+                        class="link-in-text">personal projects</a> that I use to 
+                        explore my interests in technology & software. From time to 
+                        time, I also write <a target="_blank" 
+                        href="https://medium.com/@norbusonam">Medium</a> posts about 
+                        technology and anything else that interests me.
+                    </p>
                 </div>
             </div>
 
@@ -175,9 +187,23 @@
                 </div>
             </div>
 
-            <!-- CONTACT -->
-            <div id="contact" class="row pt-5">
-                <h3 class="section-header">Contact</h3>
+            <!-- FOOTER -->
+            <div class="pt-5 pb-5" id="footer">
+                <a target="_blank" href="https://www.linkedin.com/in/norbu-sonam-967ba9170/" class="remove-color-link">
+                    <img src="./img/linkedin.svg" alt="linkedin" width="20rem">
+                </a>
+                <a target="_blank" href="https://www.instagram.com/norbu_sonam/" class="remove-color-link">
+                    <img src="./img/instagram.svg" alt="instagram" width="20rem">
+                </a>
+                <a target="_blank" href="https://twitter.com/norbusonam_" class="remove-color-link">
+                    <img src="./img/twitter.svg" alt="twitter" width="20rem">
+                </a>
+                <a target="_blank" href="https://github.com/norbusonam" class="remove-color-link">
+                    <img src="./img/github.svg" alt="github" width="20rem">
+                </a>
+                <a target="_blank" href="https://medium.com/@norbusonam" class="remove-color-link">
+                    <img src="./img/medium.svg" alt="medium" width="20rem">
+                </a>
             </div>
 
         </div>
