cleaned up left over contact code. replaced projects lorem

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,6 @@
         <link rel="stylesheet" href="./css/bio.css">
         <link rel="stylesheet" href="./css/work.css">
         <link rel="stylesheet" href="./css/projects.css">
-        <link rel="stylesheet" href="./css/contact.css">
         <title>Norbu Sonam</title>
     </head>
     <body>
@@ -33,17 +32,17 @@
                     <a target="_blank" href="https://www.linkedin.com/in/norbu-sonam-967ba9170/" class="remove-color-link">
                         <img src="./img/linkedin.svg" alt="linkedin" width="20rem">
                     </a>
-                    <a target="_blank" href="https://www.instagram.com/norbu_sonam/" class="remove-color-link">
-                        <img src="./img/instagram.svg" alt="instagram" width="20rem">
-                    </a>
                     <a target="_blank" href="https://twitter.com/norbusonam_" class="remove-color-link">
                         <img src="./img/twitter.svg" alt="twitter" width="20rem">
+                    </a>
+                    <a target="_blank" href="https://medium.com/@norbusonam" class="remove-color-link">
+                        <img src="./img/medium.svg" alt="medium" width="20rem">
                     </a>
                     <a target="_blank" href="https://github.com/norbusonam" class="remove-color-link">
                         <img src="./img/github.svg" alt="github" width="20rem">
                     </a>
-                    <a target="_blank" href="https://medium.com/@norbusonam" class="remove-color-link">
-                        <img src="./img/medium.svg" alt="medium" width="20rem">
+                    <a target="_blank" href="https://www.instagram.com/norbu_sonam/" class="remove-color-link">
+                        <img src="./img/instagram.svg" alt="instagram" width="20rem">
                     </a>
                 </div>
             </div>
@@ -53,23 +52,24 @@
                 <div class="col-12 col-sm-8 col-md-6 col-lg-4">
                     <img src="./img/norbu.jpeg" alt="portrait" id="portrait">
                 </div>
-            </div>
-            <div class="row justify-content-center mt-1" id="bio-text">
-                <div class="col-12 col-sm-10 col-md-8 col-lg-6">
-                    <h3 class="section-header">Norbu Sonam</h3>
-                    <p>
-                        I am currently a Software Engineer at Microsoft. I graduated
-                        from Rensselaer Polytechnic Institute with a major in Computer
-                        Science, concentrated in Data & Artificial Intelligence, and a 
-                        minor in Entrepreneurship. I have completed <a href="#work" 
-                        class="link-in-text"> internships</a> at various companies, 
-                        including Microsoft & IBM. I have various <a href="#projects"
-                        class="link-in-text">personal projects</a> that I use to 
-                        explore my interests in technology & software. From time to 
-                        time, I also write <a target="_blank" 
-                        href="https://medium.com/@norbusonam">Medium</a> posts about 
-                        technology and anything else that interests me.
-                    </p>
+                <div class="row justify-content-center mt-1" id="bio-text">
+                    <div class="col-12 col-sm-10 col-md-8 col-lg-6">
+                        <h3 class="section-header">Norbu Sonam</h3>
+                        <p>
+                            I am currently a Software Engineer at Microsoft. I graduated
+                            from Rensselaer Polytechnic Institute with a major in Computer
+                            Science, concentrated in Data & Artificial Intelligence, and a 
+                            minor in Entrepreneurship. I have completed <a href="#work" 
+                            class="link-in-text"> internships</a> at various companies, 
+                            including Microsoft & IBM. I have various <a href="#projects"
+                            class="link-in-text">personal projects</a> that I use to 
+                            explore my interests in technology & software. From time to 
+                            time, I also write <a target="_blank" 
+                            href="https://medium.com/@norbusonam" class="link-in-text">
+                            Medium</a> posts about technology and anything else that 
+                            interests me.
+                        </p>
+                    </div>
                 </div>
             </div>
 
@@ -144,45 +144,45 @@
             <div id="projects" class="row no-gutters pt-5 justify-content-center">
                 <h3 class="section-header">Projects</h3>
                 <div class="project-wrapper col-12 col-sm-6 col-lg-4">
-                    <div class="card" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
-                        <h4>project 1</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
+                    <div class="card" onclick="location.href='https://github.com/norbusonam/progress';" style="cursor: pointer;">
+                        <h4>Progress</h4>
+                        <p>A project tracking app that features a drag and drop kanban board view.</p>
                     </div>
                 </div>
                 <div class="project-wrapper col-12 col-sm-6 col-lg-4">
-                    <div class="card" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
-                        <h4>project 2</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
+                    <div class="card" onclick="location.href='https://github.com/norbusonam/norbusonam';" style="cursor: pointer;">
+                        <h4>This Website</h4>
+                        <p>A personal website made with pure HTML and CSS.</p>
                     </div>
                 </div>
                 <div class="project-wrapper col-12 col-sm-6 col-lg-4">
-                    <div class="card" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
-                        <h4>project 3</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
+                    <div class="card" onclick="location.href='https://github.com/norbusonam/code-to-latex';" style="cursor: pointer;">
+                        <h4>Code To Latex</h4>
+                        <p>A simple script that converts source code into ready to use latex.</p>
                     </div>
                 </div>
                 <div class="project-wrapper col-12 col-sm-6 col-lg-4">
-                    <div class="card" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
-                        <h4>project 4</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
+                    <div class="card" onclick="location.href='https://github.com/norbusonam/live-feed';" style="cursor: pointer;">
+                        <h4>Live Feed</h4>
+                        <p>A real time feed of posts delivered using WebSockets.</p>
                     </div>
                 </div>
                 <div class="project-wrapper col-12 col-sm-6 col-lg-4" >
-                    <div class="card" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
-                        <h4>project 5</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
+                    <div class="card" onclick="location.href='https://github.com/norbusonam/visualize-covid';" style="cursor: pointer;">
+                        <h4>Visualize COVID</h4>
+                        <p>A dashboard that provides an overview of global COVID data and COVID hot spots.</p>
                     </div>
                 </div>
                 <div class="project-wrapper col-12 col-sm-6 col-lg-4">
-                    <div class="card" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
-                        <h4>project 6</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
+                    <div class="card" onclick="location.href='https://github.com/norbusonam/warning-shot';" style="cursor: pointer;">
+                        <h4>Warning Shot</h4>
+                        <p>A gun shot detection system that sends SMS warnings.</p>
                     </div>
                 </div>
                 <div class="project-wrapper col-12 col-sm-6 col-lg-4">
-                    <div class="card" onclick="location.href='https://github.com/norbusonam';" style="cursor: pointer;">
-                        <h4>project 7</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, natus ad quo commodi eveniet quam provident magni voluptatibus omnis incidunt necessitatibus blanditiis doloribus sunt explicabo eaque nihil quod nemo impedit.</p>
+                    <div class="card" onclick="location.href='https://github.com/norbusonam/ha';" style="cursor: pointer;">
+                        <h4>Ha</h4>
+                        <p>A command line interface that tells you jokes.</p>
                     </div>
                 </div>
             </div>
