added new project

--- a/public/index.html
+++ b/public/index.html
@@ -178,6 +178,12 @@
                     </div>
                 </div>
                 <div class="project-wrapper col-12 col-sm-6 col-lg-4" >
+                    <div class="card" onclick="location.href='https://github.com/norbusonam/pomodoro-chrome-extension';" style="cursor: pointer;">
+                        <h4>Pomodoro Chrome Extension</h4>
+                        <p>A simple chrome extension to help manage your time and productivity.</p>
+                    </div>
+                </div>
+                <div class="project-wrapper col-12 col-sm-6 col-lg-4" >
                     <div class="card" onclick="location.href='https://github.com/norbusonam/visualize-covid';" style="cursor: pointer;">
                         <h4>Visualize COVID</h4>
                         <p>A dashboard that provides an overview of global COVID data and COVID hot spots.</p>
