added chatter to projects

--- a/public/index.html
+++ b/public/index.html
@@ -154,6 +154,12 @@
             <div id="projects" class="row no-gutters pt-5 justify-content-center">
                 <h3 class="section-header">Projects</h3>
                 <div class="project-wrapper col-12 col-sm-6 col-lg-4">
+                    <div class="card" onclick="location.href='https://github.com/norbusonam/chatter';" style="cursor: pointer;">
+                        <h4>Chatter</h4>
+                        <p>A room-based chat app built with WebSockets and Tailwind CSS.</p>
+                    </div>
+                </div>
+                <div class="project-wrapper col-12 col-sm-6 col-lg-4">
                     <div class="card" onclick="location.href='https://github.com/norbusonam/progress';" style="cursor: pointer;">
                         <h4>Progress</h4>
                         <p>A project tracking app that features a drag and drop kanban board view.</p>
