added microsoft fte description

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
                         <div class="timeline-content">
                             <img src="./img/microsoft.png" alt="">
                             <h4>Software Engineer</h4>
-                            <p>...</p>
+                            <p>Working on a V1 first party Azure service 🤫</p>
                         </div>
                     </div>
                     <div class="timeline-row">
