--- a/public/todo.html
+++ b/public/todo.html
@@ -19,6 +19,7 @@
         <li>Viewing all tasks or only incomplete tasks</li>
       </ul>
       <p>Don't let a cluttered todo list weigh you down. Try our app today and take control of your tasks and productivity.</p>
+      <p>For support, contact us <a href="https://www.norbusonam.com">here</a>.</p>
     </div>
 
   </body>
