changed job desc

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
                         <div class="timeline-content">
                             <img src="./img/microsoft.png" alt="">
                             <h4>Software Engineer</h4>
-                            <p>Extended functionality of pull request annotations, which alerts developers to vulnerabilities, helping to shift security left. Built an Azure blade that allows users to configure repositories and enable pull request annotations. Worked with other first party Azure services to enable the Defender for DevOps paid plan.</p>
+                            <p>Leveraging generative AI to help people build stunning designs with Microsoft Designer ✨</p>
                         </div>
                     </div>
                     <div class="timeline-row">
