--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
     <html lang="en">
     <head>
+        <meta charset="UTF-8">
         <script type="text/javascript">
             (function(f,b){if(!b.__SV){var e,g,i,h;window.mixpanel=b;b._i=[];b.init=function(e,f,c){function g(a,d){var b=d.split(".");2==b.length&&(a=a[b[0]],d=b[1]);a[d]=function(){a.push([d].concat(Array.prototype.slice.call(arguments,0)))}}var a=b;"undefined"!==typeof c?a=b[c]=[]:c="mixpanel";a.people=a.people||[];a.toString=function(a){var d="mixpanel";"mixpanel"!==c&&(d+="."+c);a||(d+=" (stub)");return d};a.people.toString=function(){return a.toString(1)+".people (stub)"};i="disable time_event track track_pageview track_links track_forms track_with_groups add_group set_group remove_group register register_once alias unregister identify name_tag set_config reset opt_in_tracking opt_out_tracking has_opted_in_tracking has_opted_out_tracking clear_opt_in_out_tracking start_batch_senders people.set people.set_once people.unset people.increment people.append people.union people.track_charge people.clear_charges people.delete_user people.remove".split(" ");
             for(h=0;h<i.length;h++)g(a,i[h]);var j="set set_once union unset remove delete".split(" ");a.get_group=function(){function b(c){d[c]=function(){call2_args=arguments;call2=[c].concat(Array.prototype.slice.call(call2_args,0));a.push([e,call2])}}for(var d={},e=["get_group"].concat(Array.prototype.slice.call(arguments,0)),c=0;c<j.length;c++)b(j[c]);return d};b._i.push([e,f,c])};b.__SV=1.2;e=f.createElement("script");e.type="text/javascript";e.async=!0;e.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?
@@ -11,7 +12,6 @@
             mixpanel.init('fc031cdab38b6c0f02a3e9f7c085a02c'); 
             mixpanel.track('Visit');
         </script>
-        <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/bootstrap-grid.min.css">
@@ -39,19 +39,19 @@
                     <a href="#projects" class="nav-link remove-color-link">Projects</a>
                 </div>
                 <div>
-                    <a target="_blank" href="https://www.linkedin.com/in/norbu-sonam-967ba9170/" class="remove-color-link">
+                    <a target="_blank" href="https://www.linkedin.com/in/norbu-sonam-967ba9170/" rel="noopener" class="remove-color-link">
                         <img src="./img/linkedin.svg" alt="linkedin" width="22rem" class="svg">
                     </a>
-                    <a target="_blank" href="https://twitter.com/norbusonam_" class="remove-color-link">
+                    <a target="_blank" href="https://twitter.com/norbusonam_" rel="noopener" class="remove-color-link">
                         <img src="./img/twitter.svg" alt="twitter" width="22rem" class="svg">
                     </a>
-                    <a target="_blank" href="https://medium.com/@norbusonam" class="remove-color-link">
+                    <a target="_blank" href="https://medium.com/@norbusonam" rel="noopener" class="remove-color-link">
                         <img src="./img/medium.svg" alt="medium" width="22rem" class="svg">
                     </a>
-                    <a target="_blank" href="https://github.com/norbusonam" class="remove-color-link">
+                    <a target="_blank" href="https://github.com/norbusonam" rel="noopener" class="remove-color-link">
                         <img src="./img/github.svg" alt="github" width="22rem" class="svg">
                     </a>
-                    <a target="_blank" href="https://www.instagram.com/norbu_sonam/" class="remove-color-link">
+                    <a target="_blank" href="https://www.instagram.com/norbu_sonam/" rel="noopener" class="remove-color-link">
                         <img src="./img/instagram.svg" alt="instagram" width="22rem" class="svg">
                     </a>
                 </div>
@@ -74,7 +74,7 @@
                             including Microsoft & IBM. I have various <a href="#projects"
                             class="link-in-text">personal projects</a> that I use to 
                             explore my interests in technology & software. From time to 
-                            time, I also write <a target="_blank" 
+                            time, I also write <a target="_blank" rel="noopener"
                             href="https://medium.com/@norbusonam" class="link-in-text">
                             Medium</a> posts about technology and anything else that 
                             interests me.
@@ -211,19 +211,19 @@
 
             <!-- FOOTER -->
             <div class="pt-5 pb-5" id="footer">
-                <a target="_blank" href="https://www.linkedin.com/in/norbu-sonam-967ba9170/" class="remove-color-link">
+                <a target="_blank" href="https://www.linkedin.com/in/norbu-sonam-967ba9170/" rel="noopener" class="remove-color-link">
                     <img src="./img/linkedin.svg" alt="linkedin" width="22rem" class="svg">
                 </a>
-                <a target="_blank" href="https://twitter.com/norbusonam_" class="remove-color-link">
+                <a target="_blank" href="https://twitter.com/norbusonam_" rel="noopener" class="remove-color-link">
                     <img src="./img/twitter.svg" alt="twitter" width="22rem" class="svg">
                 </a>
-                <a target="_blank" href="https://medium.com/@norbusonam" class="remove-color-link">
+                <a target="_blank" href="https://medium.com/@norbusonam" rel="noopener" class="remove-color-link">
                     <img src="./img/medium.svg" alt="medium" width="22rem" class="svg">
                 </a>
-                <a target="_blank" href="https://github.com/norbusonam" class="remove-color-link">
+                <a target="_blank" href="https://github.com/norbusonam" rel="noopener" class="remove-color-link">
                     <img src="./img/github.svg" alt="github" width="22rem" class="svg">
                 </a>
-                <a target="_blank" href="https://www.instagram.com/norbu_sonam/" class="remove-color-link">
+                <a target="_blank" href="https://www.instagram.com/norbu_sonam/" rel="noopener" class="remove-color-link">
                     <img src="./img/instagram.svg" alt="instagram" width="22rem" class="svg">
                 </a>
             </div>
