--- a/simple/index.html
+++ b/simple/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div id="container">
-    <h2 id="header">Norbu Sonam</h2>
-    <h3 id="subheader">Software Engineer @ Microsoft</h3>
+    <h1>Norbu Sonam</h1>
+    <h3>Software Engineer @ Microsoft</h3>
     <div id="link-container">
       <a target="_blank" href="https://github.com/norbusonam" rel="noopener" class="link-with-svg">
           <img src="./img/github.svg" alt="github" width="22rem" class="svg">
