updated from twitter to x

--- a/simple/index.html
+++ b/simple/index.html
@@ -20,7 +20,7 @@
           <img src="./img/linkedin.svg" alt="linkedin" width="22rem" class="svg">
       </a>
       <a target="_blank" href="https://twitter.com/norbusonam_" rel="noopener" class="link-with-svg">
-          <img src="./img/twitter.svg" alt="twitter" width="22rem" class="svg">
+          <img src="./img/x.svg" alt="x" width="22rem" class="svg">
       </a>
       <a target="_blank" href="https://medium.com/@norbusonam" rel="noopener" class="link-with-svg">
           <img src="./img/medium.svg" alt="medium" width="22rem" class="svg">
