updated linkedin link

--- a/simple/index.html
+++ b/simple/index.html
@@ -19,7 +19,7 @@
       <a target="_blank" href="https://twitter.com/norbusonam_" rel="noopener" class="link-with-svg">
           <img src="./img/x.svg" alt="x" width="22rem" class="svg">
       </a>
-      <a target="_blank" href="https://www.linkedin.com/in/norbu-sonam-967ba9170/" rel="noopener" class="link-with-svg">
+      <a target="_blank" href="https://www.linkedin.com/in/norbusonam/" rel="noopener" class="link-with-svg">
           <img src="./img/linkedin.svg" alt="linkedin" width="22rem" class="svg">
       </a>
     </div>
