--- a/simple/index.html
+++ b/simple/index.html
@@ -13,7 +13,7 @@
     <h1>Norbu Sonam</h1>
     <h3>Software Engineer @ Microsoft</h3>
     <div id="link-container">
-      <a target="_blank" href="https://whim.dev" rel="noopener" class="link-with-svg">
+      <a target="_blank" href="https://usewhim.com" rel="noopener" class="link-with-svg">
         <img src="./img/whim.svg" alt="whim" width="22rem" class="svg">
       </a>
       <a target="_blank" href="https://github.com/norbusonam" rel="noopener" class="link-with-svg">
