--- a/simple/index.html
+++ b/simple/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="container">
     <h1>Norbu Sonam</h1>
-    <h3>Software Engineer @ Microsoft</h3>
+    <h3>Software Engineer @ <a href="https://www.lindy.ai" target="_blank" class="link-inline">Lindy</a></h3>
     <div id="link-container">
       <a target="_blank" href="https://github.com/norbusonam" rel="noopener" class="link-with-svg">
           <img src="./img/github.svg" alt="github" width="22rem" class="svg">
