update twitter url

--- a/simple/index.html
+++ b/simple/index.html
@@ -16,7 +16,7 @@
       <a target="_blank" href="https://github.com/norbusonam" rel="noopener" class="link-with-svg">
           <img src="./img/github.svg" alt="github" width="22rem" class="svg">
       </a>
-      <a target="_blank" href="https://twitter.com/norbusonam_" rel="noopener" class="link-with-svg">
+      <a target="_blank" href="https://twitter.com/norbusonam" rel="noopener" class="link-with-svg">
           <img src="./img/x.svg" alt="x" width="22rem" class="svg">
       </a>
       <a target="_blank" href="https://www.linkedin.com/in/norbusonam/" rel="noopener" class="link-with-svg">
