--- a/simple/index.html
+++ b/simple/index.html
@@ -1,28 +1,58 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link type="text/css" rel="stylesheet" href="./css/style.css">
-  <script src="./js/script.js" defer></script>
-  <title>Norbu Sonam</title>
-</head>
-<body>
-  <div id="container">
-    <h1>Norbu Sonam</h1>
-    <h3>Software Engineer @ <a href="https://www.lindy.ai" target="_blank" class="link-inline">Lindy</a></h3>
-    <div id="link-container">
-      <a target="_blank" href="https://github.com/norbusonam" rel="noopener" class="link-with-svg">
-          <img src="./img/github.svg" alt="github" width="22rem" class="svg">
-      </a>
-      <a target="_blank" href="https://twitter.com/norbusonam" rel="noopener" class="link-with-svg">
-          <img src="./img/x.svg" alt="x" width="22rem" class="svg">
-      </a>
-      <a target="_blank" href="https://www.linkedin.com/in/norbusonam/" rel="noopener" class="link-with-svg">
-          <img src="./img/linkedin.svg" alt="linkedin" width="22rem" class="svg">
-      </a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link type="text/css" rel="stylesheet" href="./css/style.css" />
+    <script src="./js/script.js" defer></script>
+    <script
+      src="https://www.withsherpa.ai/tracker.js"
+      data-site-id="da9ae2fc-374a-4bcf-9e3c-7a7233041eaf"
+      data-replay="true"
+    ></script>
+    <title>Norbu Sonam</title>
+  </head>
+  <body>
+    <div id="container">
+      <h1>Norbu Sonam</h1>
+      <h3>
+        Software Engineer @
+        <a href="https://www.lindy.ai" target="_blank" class="link-inline"
+          >Lindy</a
+        >
+      </h3>
+      <div id="link-container">
+        <a
+          target="_blank"
+          href="https://github.com/norbusonam"
+          rel="noopener"
+          class="link-with-svg"
+        >
+          <img src="./img/github.svg" alt="github" width="22rem" class="svg" />
+        </a>
+        <a
+          target="_blank"
+          href="https://twitter.com/norbusonam"
+          rel="noopener"
+          class="link-with-svg"
+        >
+          <img src="./img/x.svg" alt="x" width="22rem" class="svg" />
+        </a>
+        <a
+          target="_blank"
+          href="https://www.linkedin.com/in/norbusonam/"
+          rel="noopener"
+          class="link-with-svg"
+        >
+          <img
+            src="./img/linkedin.svg"
+            alt="linkedin"
+            width="22rem"
+            class="svg"
+          />
+        </a>
+      </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
